--- a/WebApp/Areas/Administrador/Pages/Envio_Finalizado.cshtml
+++ b/WebApp/Areas/Administrador/Pages/Envio_Finalizado.cshtml
@@ -107,7 +107,7 @@
 
     <script>
         $(document).ready(function () {
-            $('#a-rechazado').addClass('active');
+            $('#a-finalizado').addClass('active');
         });
     </script>
 }
