--- a/WebApp/Areas/Paquetes/Pages/Create.cshtml
+++ b/WebApp/Areas/Paquetes/Pages/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
-@model WebApp.Areas.Paquetes.Pages.CreateModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@model WebApp.Areas.Paquetes.Pages.CreateModel
 @{
     ViewData["Title"] = "Solicitud de envío";
     Layout = "_Layout";
@@ -22,7 +22,7 @@
                 <h4 class="card-title">Nueva solicitud de envío.</h4>
             </div>
             <div class="card-body">
-                <form method="post" asp-action="Create" autocomplete="off" enctype="multipart/form-data">
+                <form method="POST" asp-action="Create" autocomplete="off" enctype="multipart/form-data" >
                     <div class="row mb-4">
                         <div class="col">
                             <label>Fotografía del paquete</label>
@@ -30,7 +30,7 @@
                                 <span class="input-group-text">
                                     <i class="fas fa-camera-retro"></i>
                                 </span>
-                                <input type="file" accept="image/png, image/jpeg, image/jpg" name="Subir_Archivo" class="form-control"  required/>
+                                <input type="file" accept="image/png, image/jpeg, image/jpg" name="Subir_Archivo" class="form-control" required />
                             </div>
                         </div>
                     </div>
@@ -66,14 +66,14 @@
                         <div class="col">
                             <label>Fecha de entrega</label>
                             <div class="input-group">
-                                <input class="form-control" asp-for="Paquete.Fecha_Entrega"/>
+                                <input class="form-control" asp-for="Paquete.Fecha_Entrega" />
                             </div>
                             <span asp-validation-for="Paquete.Fecha_Entrega" class="text-danger"></span>
                         </div>
                         <div class="col">
                             <label>Peso del paquete</label>
                             <div class="input-group">
-                                <input class="form-control" asp-for="Paquete.Peso_Contenido" placeholder="Expresa la cantidad en libras"/>
+                                <input class="form-control" asp-for="Paquete.Peso_Contenido" placeholder="Expresa la cantidad en libras" />
                                 <span class="input-group-text">
                                     lb
                                 </span>
@@ -89,7 +89,7 @@
                         </div>
                     </div>
                     <div style="display: flex; justify-content: space-around;">
-                        <button type="submit" class="btn Btn-outline-Hex">
+                        <button type="submit" class="btn Btn-outline-Hex" id="submit">
                             <i class="fas fa-share-square"></i>
                             <b>Enviar solicitud</b>
                         </button>
@@ -111,6 +111,9 @@
         $.validator.unobtrusive.parse(document);
         $(document).ready(function () {
             $('#a-paquete').addClass('active');
+            $("#submit").submit(function (e) {
+                return false;
+            });
         });
     </script>
 }
